--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 :root {
 	--main-light: #bd9551;
 	--main-dark: #2f2f30;
+	--light-sky: #ededed;
 }
 
 * {
@@ -137,7 +138,7 @@ img {
 }
 .media-link:hover,
 .media-link:focus {
-	background-color: red;
+	background-color: var(--light-sky);
 }
 
 .menu-button {
