--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 	--main-light: #bd9551;
 	--main-dark: #2f2f30;
 	--light-sky: #ededed;
+	--dark-sky: #9e9e9e;
 }
 
 * {
@@ -38,7 +39,10 @@ img {
 	text-transform: lowercase;
 	padding: 15px 40px;
 }
-
+.subheader {
+	padding-left: 40px;
+	font-style: italic;
+}
 /* main */
 .logo {
 	width: auto;
@@ -59,11 +63,20 @@ img {
 }
 .text-block-pl {
 	padding: 10px;
-	text-align: justify;
+	text-align: left;
+	font-style: italic;
 }
 .text-block-en {
-	padding-top: 10px;
-	font-style: italic;
+	padding: 10px;
+	text-align: left;
+}
+.text-block-center {
+	text-align: center;
+}
+
+.dark-sky {
+	color: var(--dark-sky);
+	text-align: right;
 }
 /* music */
 
