--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ img {
 }
 /* main */
 .logo {
-	width: auto;
+	width: 80px;
 }
 
 /* main - navigation */
@@ -147,7 +147,6 @@ img {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	/* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 .media-link:hover,
 .media-link:focus {
@@ -206,7 +205,13 @@ img {
 	margin: 0;
 	list-style: none;
 }
-
+.menu-button {
+	border: 0;
+	position: fixed;
+	top: 5px;
+	right: 5px;
+	background-color: transparent;
+}
 /* menu */
 .menu {
 	display: none;
